  * Updated lsl.common.sdfADP to allow two beams at LWA-SV
  * Cleaned up a few messages in lsl.sim.vis and lsl.reader.ldp so that they use the warnings module
  * Made problems in lsl.statistics.robust raise ValueErrors if a problem is encountered
  * Added functions to lsl.common.adp to calculate the magnitude response of the TBN and DRX filters

1.2.0
  * Added a new lsl.common.adp module to help describe ADP
  * Added support for MCS working with ADP-based stations
  * Added support for SDFs for ADP-based stations
  * Addes support for metadata handling for ADP-based stations
  * Added support for ADP TBF data
  * Added support for ADP COR data
  * Added support for complex antenna response to lsl.sim.nec_util.NECPattern
  * Dropped support for block reads in lsl.reader.drx and lsl.reader.tbn
  * Added a new interface attribute to lsl.common.stations.LWAStationBase instances
  * Added support for auto-copy to the LWAUCF in the lsl.common.sdf and lsl.common.sdfADP modules
  * Added a function to lsl.common.stations, getFullStations(), to return a list of full stations
  * General code clean-up using pylint
  * Fixed various bugs found in pylint in seldom-used routines
  * Moved the C extensions over to version 1.7 of the Numpy C API
  * Added a new OMP_SCHEDULER macro the the various C extensions to help control how OpenMP schedules things
  * Added more robust error handling inside the C extensions to help make segfaults more rare
  * Released the GIL inside the various computing C extensions and some of the LWA file format readers
  * Added a backport of the Python3 LRU cache module to help with internal caching
  * Added a new LSLInterfaces attribute to lsl.common.station.LWAStation instances to help keep track of which station uses which modules
  * Updated various scripts that ship with LSL to support data from LWA-SV
  * Updated the lsl.reader.ldp module to issue warnings on timetag errors when 'ignoreTimeTagErrors' is set to True